setup/prometheus-grafana/1-scraping-bigip.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: bigip-metrics
  namespace: monitoring
  labels:
    k8s-app: bigip-metrics
subsets:
  - addresses:
      - ip: 10.1.1.5
    ports:
      - name: metrics
        port: 443
        protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: bigip-metrics
  namespace: monitoring
  labels:
    type: bigip-metrics 
spec:
 type: ClusterIP
 ports:
 - name: metrics
   port: 443
   targetPort: 443
   protocol: TCP
