setup/prometheus-grafana/2-scraping-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-metrics-plus
  namespace: nginx
  labels:
    type: nginx-metrics
spec:
  ports:
  - port: 9113
    protocol: TCP
    targetPort: 9113
    name: prometheus
  selector:
    app: nginx-plus

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-metrics-infra
  namespace: nginx
  labels:
    type: nginx-metrics
spec:
  ports:
  - port: 9113
    protocol: TCP
    targetPort: 9113
    name: prometheus
  selector:
    app: nginx-infra
